<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.unifood.fragments.RestaurantProfileFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/restaurant_pic"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:layout_below="@+id/restaurant_pic"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <!--<ImageView
                android:id="@+id/drop_down_option_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_action_overflow" />-->

            <TextView
                android:id="@+id/rest_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="Estabelecimento"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/rest_profile_pic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/restaurant_pic"
            android:layout_alignTop="@id/profile_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-80dp"
            android:background="@drawable/profile_circular_border_imageview"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/restaurant_icon" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rest_profile_uni"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="#fff"

                android:padding="15dp"
                android:text="Campus, Universidade" />

            <TextView
                android:id="@+id/rest_profile_local"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"

                android:padding="15dp"
                android:text="Localização" />

            <TextView
                android:id="@+id/rest_profile_rating"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="#fff"

                android:padding="15dp"
                android:text="Avaliação" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>