...
            >

            <TextView
                android:text="Nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/restaurant_item_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/jet" />

            <TextView
                android:text="Próximo ao bloco BG"
...
