...
        android:layout_alignParentTop="true">

        <TabHost
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/restaurant_host_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

...
                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/favButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:clickable="true"
                android:onClick="onClick"
                app:fabSize="mini"
...
