<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_restaurant_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.unifood.activities.RestaurantRegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:text="Dados do Proprietário"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textView"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Name"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/user_first_name_field" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Last Name"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/user_last_name_field" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/user_email_field"
            android:hint="Email"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/user_password_field"
            android:hint="Password"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="Dados do Restaurante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/restaurant_name_field"
            android:hint="Restaurant Name"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/restaurant_description"
            android:hint="Restaurant Description"
            android:layout_gravity="center"
            />

            <!-- University Name Label -->
            <TextView
                android:layout_marginTop="4dp"
                android:text="Campus:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_campus_spinner"
                android:hint="Campus"
                android:layout_marginBottom="4dp"/>


            <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/restaurant_location"
            android:hint="Referência de Localização"
            android:layout_gravity="center"
            />

        <Button
            android:text="Sign Up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_sing_up_button" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>
