...
        android:title="Editar Informações"
        app:showAsAction="never"/>

    <item
        android:id="@+id/user_delete"
        android:orderInCategory="100"
        android:title="Deletar conta"
        app:showAsAction="never"/>

    <item
        android:id="@+id/user_logout"
        android:orderInCategory="100"
        android:title="Sair"
...
